# BiggestBlackestAPI

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml  docker-snapshot.sh  example.json  generated.go  go.mod  kubernetes.yaml  models_gen.go  resolver.go  schema.graphql  seed.Dockerfile
BiggestBlackestAPI/: BiggestBlackestAPI.sln
BiggestBlackestAPI/BiggestBlackestAPI/: BiggestBlackestAPI.csproj
BiggestBlackestAPI/BiggestBlackestAPI/Properties/: AssemblyInfo.cs
gameServer/: client.go  gameflow.md  hub.go
migrations/2019-11-16-040835_Initial_Tables/: down.sql  up.sql
migrations/2019-11-25-235850_Card_Set_Relationship/: down.sql  up.sql
migrations/2019-11-26-025922_Lowercase_Table_Names/: down.sql  up.sql
migrations/2019-11-27-151514_Full_Text_Search_Card_Set/: \  down.sql  up.sql
migrations/2019-12-04-173002_Card_User_Rating/: down.sql  up.sql
migrations/2019-12-04-193901_Card_Query/: down.sql  up.sql
migrations/2019-12-04-223054_Cleanup/: down.sql  up.sql
migrations/2019-12-05-003926_Sets_Query/: down.sql  up.sql
migrations/2019-12-05-004651_User_Rate_Card/: down.sql  up.sql
migrations/2019-12-05-010725_Fix_TsVector_Trigger/: up.sql
migrations/2019-12-11-202929_Get_Cards_Include_SetName/: down.sql  up.sql
migrations/2019-12-11-235516_Filter_Inactive_In_Functions/: up.sql
migrations/2019-12-12-220506_Create_Card/: down.sql  up.sql
migrations/2019-12-12-222123_Create_Daily_Sets/: down.sql  up.sql
migrations/2019-12-12-234809_Create_Weekly_Sets/: down.sql  up.sql
migrations/2019-12-12-235111_Create_Monthly_Sets/: down.sql  up.sql
migrations/2019-12-12-235501_Create_Yearly_Sets/: down.sql  up.sql
migrations/2019-12-16-184440_User_Rate_Card_Combination/: down.sql  up.sql
migrations/2019-12-16-223542_CardUserFilter/: down.sql  up.sql
migrations/2019-12-17-003533_User_Card_Combo_Add_Ordinal/: down.sql  up.sql
migrations/2019-12-17-170840_User_Rate_Card_Upsert/: down.sql  up.sql
migrations/init/: down.sql  up.sql
seed/: import.sql
server/: server.go
src/: db.rs  gql.rs  gql_schema.rs  main.rs  models.rs  schema.rs
