[package]
name = "bba"
version = "0.1.0"
authors = ["Nick Dolan <nicholas.dolan1@gmail.com>, Grace Chenevert, Cameron Otts, Aaron Dentro"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0-alpha.6"
base64 = "0.11"
dotenv = "0.9.0"
env_logger = "0.6"
fallible-iterator = "0.2"
juniper = "0.14"
juniper-from-schema = "0.5"
postgres = "0.16.0-rc.2"
r2d2_postgres = "0.15.0-rc.1"
rand = "0.7"
serde_json = "1.0"
url = "2.1"